@@ -13,6 +13,8 @@ Revision history for Perl extension Apache::Gallery.
 	  (Debian bug #423004, Luca Capello)
 	- Fixed counter typo for <directory>.folder in next directory
 	  menu item.  (Luca Capello)
+	- Added support to ignore items through <directory|file>.ignore.
+	 (Debian bug #619625, Luca Capello)
 
 1.0.1 Wed Feb 23 20:45:38 CET 2011
 
